--- a/src/partials/about-section.html
+++ b/src/partials/about-section.html
@@ -3,7 +3,7 @@
   <h3 class="about__label">tradition and love</h3>
   <h2 class="about__title">how it’s made?</h2>
   <div class="about__main">
-      <picture class="about__picture">
+      <picture class="about__picture milk-shake">
         <source srcset="./images/home-pic4.png 1x, ./images/home-pic4@2x.png 2x" media="(min-width: 1280px)"/>
         <source srcset="./images/home-pic4tab.png 1x, ./images/home-pic4tab@2x.png 2x" media="(min-width: 768px)"/>
         <source srcset="./images/home-pic4ph.png 1x, ./images/home-pic4ph@2x.png 2x" media="(max-width: 768px)"/>
@@ -22,10 +22,10 @@
         tincidunt.
         <span>Aliquam erat volutpat. Aenean accumsan.</span>
       </p>
-      <button class="about__content-button" type="button">
+      <button class="about__content-button" type="button"><span class="bounce">
         Read more
-        <svg class="about__content-icon" width="4px" height="8px">
-          <use href="./images/sprite.svg#icon-Vector-1"></use></svg></button>
+        <svg class="about__content-icon " width="4px" height="8px">
+          <use href="./images/sprite.svg#icon-Vector-1"></use></svg></span> </button>
     </div>
   </div>
 </div>
