--- a/src/sass/components/_about-section.scss
+++ b/src/sass/components/_about-section.scss
@@ -1,5 +1,6 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 @import 'src/sass/utils/_vars.scss';
+@import 'src/sass/utils/_keyframes.scss';
 
 .about {
   background-color: $secondBackgroundColor;
@@ -99,7 +100,6 @@
     cursor: pointer;
   }
 }
-
 .about__content-icon {
   width: 9px;
   height: 9px;
@@ -151,7 +151,7 @@
     max-width: 334px;
   }
 
-  .about__content-text {
+   .about__content-text {
     margin-bottom: 20px;
   }
 
@@ -171,7 +171,12 @@
       background-image: url(../images/sectionbg@2x.png);
     }
   }
-  .about__main {
+   
+  .milk-shake:hover {
+  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+ }
+
+   .about__main {
     padding-left: 16px;
     padding-bottom: 20px;
     display: flex;
