--- a/src/partials/customer-rev-section.html
+++ b/src/partials/customer-rev-section.html
@@ -1,9 +1,11 @@
-<section class="customer-rev  container  slider-wrapper">
-    <!-- <button class="slide-arrow" id="slide-arrow-prev">&#8249;</button><button class="slide-arrow" id="slide-arrow-next">&#8250;</button> -->
+<section class="customer-rev  container ">
+    
     <h2 hidden class="customer-rev__title">Customer reviews</h2>
-    <div class="customer-review__container   container-customer">
-        <!-- <ul class="slides-container" id="slides-container">
-            <li class="slide visibile"> -->
+    <div class="customer-review__container  carousel-wrapper container-customer">
+        <button class="carousel-arrow" id="carousel-arrow-prev"><svg width="20px" height="20px">
+            <use href="./images/sprite.svg#arrow-back"></use></svg></button>
+        <ul class="carousel-container unstyled-list" id="carousel-container">
+            <li class=" carousel-container__item carousel">
                 <img class="customer-review__photo" srcset="
                 ./images/emily-d.jpg 1x,
                 ./images/emily-d@2x.jpg 2x
@@ -15,7 +17,7 @@
                         <article class="customer-review__review">
                             Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla
                             quam
-                            nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+                            nunc, accumsan congue.
                         </article>
                     </div>
 
@@ -23,10 +25,50 @@
                         <p class="customer-review__name-place">Emily, Los Angeles</p>
                     </div>
                 </div>
-            <!-- </li> -->
-        <!-- </ul> -->
+            </li>
+            <li class="carousel carousel-container__item">
+                <img class="customer-review__photo" srcset="
+                ./images/andreea-d.jpg 1x,
+                ./images/andreea-d@2x.jpg 2x
+                " src="./images/andreea-d.jpg" alt="customer photo" width="85" height="85" />
+
+                <div class="customer-review__rev">
+                    <div class="customer-review__rev-container">
+                        <div class="customer-reviews__line"></div>
+                        <article class="customer-review__review">
+                            Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. 
+                        </article>
+                    </div>
+
+                    <div class="customer-review__name">
+                        <p class="customer-review__name-place">Andreea, Seychelles</p>
+                    </div>
+                </div>
+            </li> 
+            <li class="carousel carousel-container__item">
+                <img class="customer-review__photo" srcset="
+                ./images/cristina-d.jpg 1x,
+                ./images/cristina-d@2x.jpg 2x
+                " src="./images/cristina-d.jpg" alt="customer photo" width="85" height="85" />
+
+                <div class="customer-review__rev">
+                    <div class="customer-review__rev-container">
+                        <div class="customer-reviews__line"></div>
+                        <article class="customer-review__review">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et.
+                        </article>
+                    </div>
+
+                    <div class="customer-review__name">
+                        <p class="customer-review__name-place">Cristina, Punta Cana</p>
+                    </div>
+                </div>
+            </li>  
+        </ul>
+        <button class="carousel-arrow" id="carousel-arrow-next"><svg width="20px" height="20px">
+        <use href="./images/sprite.svg#icon-Vector-1"></use></svg></button>
     </div>
-</section>
+</section> 
 
  
     
