--- a/src/sass/components/_customer-rev-section.scss
+++ b/src/sass/components/_customer-rev-section.scss
@@ -45,7 +45,7 @@
     &::before {
       content: '';
       height: 23%;
-      width: 28%;
+      width: 40%;
       z-index: -2;
       background-image: url(../images/quotes.svg);
       background-repeat: no-repeat;
@@ -90,6 +90,31 @@
   height: 67%;
 }
 
+.carousel-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+.carousel-container__item {
+display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+
+.carousel-arrow {
+  cursor: pointer;
+  background-color: #fff;
+  border: none;
+   
+}
+.carousel {
+display: none;
+}
+
+.carousel:nth-child(1) {
+display: flex;
+}
+
 @media screen and (min-width: 768px) {
   .customer-review__rev-container {
     width: 620px;
@@ -99,11 +124,37 @@
     width: 87%;
     height: 40%;
     left: 7%;
+   
   }
 
   .customer-review__review:before {
     height: 91%;
     left: 1%;
+  }
+
+  .carousel-wrapper {
+    display: flex;
+    flex-direction: row;
+  }
+  .carousel-container__item {
+  display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+  }
+
+  .carousel-arrow {
+    cursor: pointer;
+    background-color: #fff;
+    border: none;
+     
+  }
+ .carousel {
+  display: none;
+  }
+
+  .carousel:nth-child(1) {
+  display: flex;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -155,74 +206,35 @@
     width: 85%;
     height: 42%;
     background-image: repeating-linear-gradient(#e1e1e1 0 1px, #fafafa 0 31px);
-    top: 83px;
+    top: 79px;
     left: 7%;
   }
+  
+  .carousel-wrapper {
+    display: flex;
+    flex-direction: row;
+  }
+  .carousel-container__item {
+  display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+  }
+
+  .carousel-arrow {
+    cursor: pointer;
+    background-color: #fff;
+    border: none;
+     
+  }
+ .carousel {
+  display: none;
+  }
+
+  .carousel:nth-child(1) {
+  display: flex;
+  }
+
 }
-
-//   .slider-wrapper {
-//     margin: 1rem;
-//     position: relative;
-//     overflow: hidden;
-//   }
-
-// .slides-container {
-//   height: calc(100vh - 2rem);
-//   width: 100%;
-//   display: flex;
-//   overflow: scroll;
-//   scroll-behavior: smooth;
-//   list-style: none;
-//   margin: 0;
-//   padding: 0;
-//   transition: all .15s cubic-bezier(.07,.95,0,1);
-// }
-
-//   .slide-arrow {
-//     position: absolute;
-//     display: flex;
-//     top: 0;
-//     bottom: 0;
-//     margin: auto;
-//     height: 4rem;
-//     background-color: white;
-//     border: none;
-//     width: 2rem;
-//     font-size: 3rem;
-//     padding: 0;
-//     cursor: pointer;
-//     opacity: 2;
-//     transition: opacity 100ms;
-//   }
-
-//   .slide-arrow:hover,
-//   .slide-arrow:focus {
-//     opacity: 1;
-//   }
-
-// #slide-arrow-prev {
-//   left: 0;
-//   padding-left: 0.25rem;
-//   border-radius: 0 2rem 2rem 0;
-// }
-
-// #slide-arrow-next {
-//   right: 0;
-//   padding-left: 0.75rem;
-//   border-radius: 2rem 0 0 2rem;
-// }
-
-//   .slide {
-//     width: 20%;
-//     height: 50%;
-//     flex: 1 0 100%;
-//     transition: all .15s cubic-bezier(.07,.95,0,1);
-// }
-
-//   .slide:nth-child(1) {
-//     opacity:1;
-//   }
-
-//   .slide:nth-child(2) {
-//     opacity:1;
-//   }
+  
+ 
