gallery-last-part

--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,148 +1,193 @@
 <section class="gallery">
+
       <div class="gallery-container">
             <div class="gallery-container__box">
                   <picture class="gallery-container__picture">
                         <source media="screen and (max-width: 767px)" srcset="images/img-gallery1-m.png,
-                                 images/img-gallery1-mx2.png 2x  " />
+                                                   images/img-gallery1-mx2.png 2x  " />
                         <source media="screen and (min-width: 768px) and (max-width: 1279px)" srcset="images/img-gallery1-t.png,
-                   images/img-gallery1-tx2.png 2x " />
+                                     images/img-gallery1-tx2.png 2x " />
                         <source media="screen and (min-width: 1280px)" srcset="images/img-gallery1-d.png,
-                                 images/img-gallery1-dx2.png 2x   " />
+                                                   images/img-gallery1-dx2.png 2x   " />
                         <img src="images/img-gallery1-m.png" alt="" />
                   </picture>
             </div>
             <div class="gallery-container__box">
                   <picture class="gallery-container__picture">
                         <source media="screen and (max-width: 767px)" srcset="images/img-gallery2-m.png,
-                                                   images/img-gallery2-mx2.png 2x  " />
+                                                                     images/img-gallery2-mx2.png 2x  " />
                         <source media="screen and (min-width: 768px) and (max-width: 1279px)" srcset="images/img-gallery2-t.png,
-                                     images/img-gallery2-tx2.png 2x " />
+                                                       images/img-gallery2-tx2.png 2x " />
                         <source media="screen and (min-width: 1280px)" srcset="images/img-gallery2-d.png,
-                                                   images/img-gallery2-dx2.png 2x   " />
+                                                                     images/img-gallery2-dx2.png 2x   " />
                         <img src="images/img-gallery2-m.png" alt="" />
                   </picture>
                   <picture class="gallery-container__picture">
                         <source media="screen and (max-width: 767px)" srcset="images/img-gallery3-m.png,
-                                                   images/img-gallery3-mx2.png 2x  " />
+                                                                     images/img-gallery3-mx2.png 2x  " />
                         <source media="screen and (min-width: 768px) and (max-width: 1279px)" srcset="images/img-gallery3-t.png,
-                                     images/img-gallery3-tx2.png 2x " />
+                                                       images/img-gallery3-tx2.png 2x " />
                         <source media="screen and (min-width: 1280px)" srcset="images/img-gallery3-d.png,
-                                                   images/img-gallery3-dx2.png 2x   " />
+                                                                     images/img-gallery3-dx2.png 2x   " />
                         <img src="images/img-gallery3-m.png" alt="" />
                   </picture>
             </div>
             <div class="gallery-container__box">
                   <picture class="gallery-container__picture">
                         <source media="screen and (max-width: 767px)" srcset="images/img-gallery4-m.png,
-                                                   images/img-gallery4-mx2.png 2x  " />
+                                                                     images/img-gallery4-mx2.png 2x  " />
                         <source media="screen and (min-width: 768px) and (max-width: 1279px)" srcset="images/img-gallery4-t.png,
-                                     images/img-gallery4-tx2.png 2x " />
+                                                       images/img-gallery4-tx2.png 2x " />
                         <source media="screen and (min-width: 1280px)" srcset="images/img-gallery4-d.png,
-                                                   images/img-gallery4-dx2.png 2x   " />
+                                                                     images/img-gallery4-dx2.png 2x   " />
                         <img src="images/img-gallery4-m.png" alt="" />
                   </picture>
-                  <picture class="gallery-container__picture">
+                  <picture class="gallery-container__picture gallery-container__picture--modifier">
                         <source media="screen and (max-width: 767px)" srcset="images/img-gallery5-m.png,
-                                                   images/img-gallery5-mx2.png 2x  " />
+                                                                     images/img-gallery5-mx2.png 2x  " />
                         <source media="screen and (min-width: 768px) and (max-width: 1279px)" srcset="images/img-gallery5-t.png,
-                                     images/img-gallery5-tx2.png 2x " />
+                                                       images/img-gallery5-tx2.png 2x " />
                         <source media="screen and (min-width: 1280px)" srcset="images/img-gallery5-d.png,
-                                                   images/img-gallery5-dx2.png 2x   " />
+                                                                     images/img-gallery5-dx2.png 2x   " />
                         <img src="images/img-gallery5-m.png" alt="" />
                   </picture>
             </div>
             <div class="gallery-container__box">
                   <picture class="gallery-container__picture">
                         <source media="screen and (max-width: 767px)" srcset="images/img-gallery6-m.png,
-                                                   images/img-gallery6-mx2.png 2x  " />
+                                                                     images/img-gallery6-mx2.png 2x  " />
                         <source media="screen and (min-width: 768px) and (max-width: 1279px)" srcset="images/img-gallery6-t.png,
-                                     images/img-gallery6-tx2.png 2x " />
+                                                       images/img-gallery6-tx2.png 2x " />
                         <source media="screen and (min-width: 1280px)" srcset="images/img-gallery6-d.png,
-                                                   images/img-gallery6-dx2.png 2x   " />
+                                                                     images/img-gallery6-dx2.png 2x   " />
                         <img src="images/img-gallery6-m.png" alt="" />
                   </picture>
                   <picture class="gallery-container__picture">
                         <source media="screen and (max-width: 767px)" srcset="images/img-gallery7-m.png,
-                                                   images/img-gallery7-mx2.png 2x  " />
+                                                                     images/img-gallery7-mx2.png 2x  " />
                         <source media="screen and (min-width: 768px) and (max-width: 1279px)" srcset="images/img-gallery7-t.png,
-                                     images/img-gallery7-tx2.png 2x " />
+                                                       images/img-gallery7-tx2.png 2x " />
                         <source media="screen and (min-width: 1280px)" srcset="images/img-gallery7-d.png,
-                                                   images/img-gallery7-dx2.png 2x   " />
+                                                                     images/img-gallery7-dx2.png 2x   " />
                         <img src="images/img-gallery7-m.png" alt="" />
                   </picture>
             </div>
             <div class="gallery-container__box">
                   <picture class="gallery-container__picture">
                         <source media="screen and (max-width: 767px)" srcset="images/img-gallery8-m.png,
-                                                   images/img-gallery8-mx2.png 2x  " />
+                                                                     images/img-gallery8-mx2.png 2x  " />
                         <source media="screen and (min-width: 768px) and (max-width: 1279px)" srcset="images/img-gallery8-t.png,
-                                     images/img-gallery8-tx2.png 2x " />
+                                                       images/img-gallery8-tx2.png 2x " />
                         <source media="screen and (min-width: 1280px)" srcset="images/img-gallery8-d.png,
-                                                   images/img-gallery8-dx2.png 2x   " />
+                                                                     images/img-gallery8-dx2.png 2x   " />
                         <img src="images/img-gallery8-m.png" alt="" />
                   </picture>
                   <picture class="gallery-container__picture">
                         <source media="screen and (max-width: 767px)" srcset="images/img-gallery9-m.png,
-                                                   images/img-gallery1-mx2.png 2x  " />
+                                                                     images/img-gallery1-mx2.png 2x  " />
                         <source media="screen and (min-width: 768px) and (max-width: 1279px)" srcset="images/img-gallery9-t.png,
-                                     images/img-gallery9-tx2.png 2x " />
+                                                       images/img-gallery9-tx2.png 2x " />
                         <source media="screen and (min-width: 1280px)" srcset="images/img-gallery9-d.png,
-                                                   images/img-gallery1-dx2.png 2x   " />
+                                                                     images/img-gallery1-dx2.png 2x   " />
                         <img src="images/img-gallery9-m.png" alt="" />
                   </picture>
             </div>
             <div class="gallery-container__box">
                   <picture class="gallery-container__picture">
                         <source media="screen and (max-width: 767px)" srcset="images/img-gallery10-m.png,
-                                                   images/img-gallery10-mx2.png 2x  " />
+                                                                     images/img-gallery10-mx2.png 2x  " />
                         <source media="screen and (min-width: 768px) and (max-width: 1279px)" srcset="images/img-gallery10-t.png,
-                                     images/img-gallery10-tx2.png 2x " />
+                                                       images/img-gallery10-tx2.png 2x " />
                         <source media="screen and (min-width: 1280px)" srcset="images/img-gallery10-d.png,
-                                                   images/img-gallery10-dx2.png 2x   " />
+                                                                     images/img-gallery10-dx2.png 2x   " />
                         <img src="images/img-gallery10-m.png" alt="" />
                   </picture>
             </div>
       </div>
       <div class="testimonials-container">
-            <picture class="testimonials-container__picture">
-                  <source media="screen and (min-width: 1200px)" srcset="images/img-testimonials1.png,
-                                  images/img-testimonials1-x2.png 2x" />
-                  <img src="images/img-testimonials1.png" alt="" />
-            </picture>
-            <article class="testimonials">
-                  <svg class="testimonials__svg" width="54" height="40">
-                        <use href="./images/icons-gallery.svg#icon-untitled"></use>
-                  </svg>
-                  <div class="repeted-line"></div>
-                  <p class="testimonials__text">
-                        Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
-                        nulla
-                        quam
-                        nunc, accumsan
-                        congue. Lorem ipsum primis in nibh vel risus.
-                  </p>
-            </article>
-            <div class="testimonials-container__dot ">
-                  <span class="testimonials-container__item"></span>
-                  <span class="testimonials-container__item"></span>
-                  <span class="testimonials-container__item"></span>
+            <div class="slideshow-container">
+                  <div class="my-slides fade">
+                        <picture class="testimonials-container__picture">
+                              <source media="screen and (min-width: 1200px)" srcset="images/img-testimonials1.png,
+                                                          images/img-testimonials1-x2.png 2x" />
+                              <img src="images/img-testimonials1.png" alt="" />
+                        </picture>
+                        <article class="testimonials">
+                              <div class="repeted-line"></div>
+                              <p class="testimonials__text">
+                                    Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In
+                                    hendrerit
+                                    nulla
+                                    quam
+                                    nunc, accumsan
+                                    congue. Lorem ipsum primis in nibh vel risus.
+                              </p>
+                        </article>
+                        <div class="testimonials-container__dot ">
+                              <span class="testimonials-container__item"></span>
+                              <span class="testimonials-container__item"></span>
+                              <span class="testimonials-container__item"></span>
+                        </div>
+                        <h3 class="testimonials-container__person">Emily, Los Angeles</h3>
+                  </div>
+                  <div class="my-slides fade">
+                        <picture class="testimonials-container__picture">
+                              <source media="screen and (max-width: 320px)" srcset="images/img-testimonials2.png,
+                                                                            images/img-testimonials2-x2.png 2x" />
+                              <img src="images/img-testimonials2.png" alt="" />
+                        </picture>
+                        <article class="testimonials">
+                              <div class="repeted-line"></div>
+                              <p class="testimonials__text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at molestie nibh,
+                                    a laoreet erat. In et urna
+                                    consectetur, mollis urna quis, pretium massa. Nunc.
+                              </p>
+                        </article>
+                        <div class="testimonials-container__dot ">
+                              <span class="testimonials-container__item"></span>
+                              <span class="testimonials-container__item"></span>
+                              <span class="testimonials-container__item"></span>
+                        </div>
+                        <h3 class="testimonials-container__person">Mary, New York</h3>
+                  </div>
+                  <div class="my-slides fade">
+                        <picture class="testimonials-container__picture">
+                              <source media="screen and (max-width: 320px)" srcset="images/img-testimonials3.png,
+                                                                            images/img-testimonials3x2.png 2x" />
+                              <img src="images/img-testimonials3.png" alt="" />
+                        </picture>
+                        <article class="testimonials">
+                              <div class="repeted-line"></div>
+                              <p class="testimonials__text">
+                                    Nullam id magna eget dolor faucibus sagittis. Pellentesque habitant morbi tristique
+                                    senectus et netus et malesuada fames
+                                    ac turpis egestas. Ut turpis eros, ullamcorper eget.
+                              </p>
+                        </article>
+                        <div class="testimonials-container__dot ">
+                              <span class="testimonials-container__item"></span>
+                              <span class="testimonials-container__item"></span>
+                              <span class="testimonials-container__item"></span>
+                        </div>
+                        <h3 class="testimonials-container__person">Annie, Pheonix</h3>
+                  </div>
             </div>
-            <h3 class="testimonials-container__person">Emily, Los Angeles</h3>
             <form class="radio-button">
-                  <label class="radio-button__container">
-                        <input class="radio-button__container__input" type="radio" checked="checked" name="radio">
+                  <label class="radio-button__container dot" onclick="currentSlide(1)">
+                        <input class="radio-button__input dot" type="radio" checked="checked" name="radio">
                         <span class="checkmark"><svg class="checkmark__svg">
                                     <use href="./images/icons-gallery.svg#icon-Vector-6"></use>
                               </svg></span>
                   </label>
-                  <label class="radio-button__container">
-                        <input class="radio-button__container__input" type="radio" name="radio">
+                  <label class="radio-button__container dot" onclick="currentSlide(2)">
+                        <input class="radio-button__input dot" type="radio" name="radio">
                         <span class="checkmark"><svg class="checkmark__svg">
                                     <use href="./images/icons-gallery.svg#icon-Vector-6"></use>
                               </svg></span>
                   </label>
-                  <label class="radio-button__container">
-                        <input class="radio-button__container__input" type="radio" name="radio">
+                  <label class="radio-button__container dot" onclick="currentSlide(3)">
+                        <input class="radio-button__input dot" type="radio" name="radio">
                         <span class="checkmark"><svg class="checkmark__svg">
                                     <use href="./images/icons-gallery.svg#icon-Vector-6"></use>
                               </svg></span>
