--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -16,8 +16,10 @@ $font-weight-400: 400;
 $font-weight-500: 500;
 $font-weight-700: 700;
 
+$font-size-12: 12px;
 $font-size-14: 14px;
 $font-size-16: 16px;
+$font-size-18: 18px;
 $font-size-20: 20px;
 $font-size-30: 30px;
 $font-size-38: 38px;
