--- a/src/partials/howitsmade.html
+++ b/src/partials/howitsmade.html
@@ -56,26 +56,20 @@
                 <h2 class="made__title">how it’s made?</h2>
         
                 <div class="made-section">
-                    <div class="made-section__divimage">
+                    
                         <picture class="made-section__image">
-                            <source
-                            media="screen and (max-width: 767px)"
-                            srcset="./images/made-M-1x.png 1x, ./images/made-M-2x.png 2x"
-                            />
-                            <source media="screen and (min-width: 768px)"
-                            srcset="images\made-T-1x.png 1x, images\made-T-2x.png 2x " />
-
-                            <source media="screen and (min-width: 1280px)"
-                            srcset="./images/made-D-1x.png 1x, ./images/made-D-2x.png 2x " />
-                            
+                            <source media="screen and (max-width: 767px)" srcset="./images/made-M-1x.png 1x, ./images/made-M-2x.png 2x" />
+                            <source media="screen and (min-width: 768px) and (max-width: 1279px)" srcset="images\made-T-1x.png 1x, images\made-T-2x.png 2x " />
+                        
+                            <source media="screen and (min-width: 1280px)" srcset="./images/made-D-1x.png 1x, ./images/made-D-2x.png 2x " />
+                        
                             <img src="/src/images/made-D-1x.png" alt="cow1">
-
+                        
                         </picture>
-
-
-
+                        
+                        
+                        
                         <!-- <img class="made-section__image" src="/src/images/made-M-1x.png" alt="cow"> width="501px"-->
-                    </div>
                     <div class="made-section__text">
                         <p class="made-section__text made-section__text--text1">Fusce ut velit laoreet, tempus arcu eu, molestie
                             tortor. <br> Nam vel justo cursus, faucibus lorem eget, egestas eros. <br> Maecenas eleifend erat at
@@ -101,7 +95,7 @@
                         <ul class="quantity__list">
                             <li class="quantity__item">
                                 <div class="quantity__svg-container">
-                                    <svg class="quantity__svg">
+                                    <svg class="quantity__svg" width="33px" height="50px">
                                         <use href="/src/images//icons-svg-how.svg#icon-Group-1"></use>
         
                                     </svg>
@@ -121,7 +115,7 @@
                             </li>
                             <li class="quantity__item">
                                 <div class="quantity__svg-container">
-                                    <svg class="quantity__svg">
+                                    <svg class="quantity__svg" width="33px" height="50px">
                                         <use href="/src/images/icons-svg-how.svg#icon-Group-3"></use>
         
                                     </svg>
