--- a/src/sass/_howitsmade.scss
+++ b/src/sass/_howitsmade.scss
@@ -204,6 +204,8 @@
    font-size: 30px;
    letter-spacing: 0.04em;
    color: $secondary-color;
+   margin: 0px;
+   padding-top: 60px;
    }
 
    &__title{
@@ -222,13 +224,14 @@
 	background-color: $secondary-background-color;
     font-family: 'DM Sans';
     font-style: normal;
+	padding-bottom: 40px;
     
 	// flex-direction: column;
 
 
-    &__divimage{
-       margin-right: 99px;
-    }
+    // &__divimage{
+    //    margin-right: 99px;
+    // }
 
     &__image{
 		width:280px;
@@ -255,8 +258,8 @@
         align-items: center;
         text-align: center;
         color: $primary-color;
-        position: absolute;
-        top: 632px;
+        // position: absolute;
+        // top: 632px;
         
         
     }
@@ -294,9 +297,10 @@
 
     &__list{
         display: flex;
-        // flex-direction: start;
+        flex-direction: column;
         list-style: none;
         margin: 0px;
+		padding: 0px;
         padding-bottom: 209px;
         
     }
@@ -343,7 +347,7 @@
 
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) and (max-width: 1279px){
 
 	.container{
 		width: 768px;
@@ -354,10 +358,19 @@
 	.made-section{
 		background: none;
 		background-color: $secondary-background-color;
+		display: flex;
+		gap: 32px;
+
 	}
 
 	.made-section__image{
 		width: 336px;
+	}
+	.quantity__list{
+		margin: 0px;
+		padding: 0px;
+		display: flex;
+    	flex-direction: row;
 	}
 
 }
@@ -371,13 +384,22 @@
 	}
 
 	.made-section {
-		background: url(../images/made-background-1280.png);
+		background: url(../images/made-background-D-1x.png);
     	background-repeat: no-repeat;
 		display: flex;
+		gap: 32px;
 	}
 
 	.made-section__image{
 		width: 501px;
+		align-items: center;
+	}
+
+	.made-section__text--text3{
+		padding-bottom: 40px;
+	}
+	.quantity__list{
+		flex-direction: row;
 	}
 }
 
@@ -404,4 +426,10 @@
 			background: url(../images/made-background-D-2x.png);
 			background-repeat: no-repeat;
 		}
+		.made-section__button{
+			position: absolute;
+        	top: 632px;
+		}
+
+		
 	}
