--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -182,6 +182,8 @@ body {
   font-size: 30px;
   letter-spacing: 0.04em;
   color: #ffa5ba;
+  margin: 0px;
+  padding-top: 60px;
 }
 .made__title {
   font-family: "Titan One";
@@ -197,9 +199,7 @@ body {
   background-color: #fff5f6;
   font-family: "DM Sans";
   font-style: normal;
-}
-.made-section__divimage {
-  margin-right: 99px;
+  padding-bottom: 40px;
 }
 .made-section__image {
   width: 280px;
@@ -223,8 +223,6 @@ body {
   align-items: center;
   text-align: center;
   color: #d41443;
-  position: absolute;
-  top: 632px;
 }
 
 .made-section__text--text1 {
@@ -254,8 +252,10 @@ body {
 
 .quantity__list {
   display: flex;
+  flex-direction: column;
   list-style: none;
   margin: 0px;
+  padding: 0px;
   padding-bottom: 209px;
 }
 .quantity__item {
@@ -292,7 +292,7 @@ body {
   color: #000000;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1279px) {
   .container {
     width: 768px;
     margin: 0px auto;
@@ -301,9 +301,17 @@ body {
   .made-section {
     background: none;
     background-color: #fff5f6;
+    display: flex;
+    gap: 32px;
   }
   .made-section__image {
     width: 336px;
+  }
+  .quantity__list {
+    margin: 0px;
+    padding: 0px;
+    display: flex;
+    flex-direction: row;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -313,12 +321,20 @@ body {
     background-color: #fff5f6;
   }
   .made-section {
-    background: url(../images/made-background-1280.png);
+    background: url(../images/made-background-D-1x.png);
     background-repeat: no-repeat;
     display: flex;
+    gap: 32px;
   }
   .made-section__image {
     width: 501px;
+    align-items: center;
+  }
+  .made-section__text--text3 {
+    padding-bottom: 40px;
+  }
+  .quantity__list {
+    flex-direction: row;
   }
 }
 @media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
@@ -336,5 +352,9 @@ body {
   .made-section {
     background: url(../images/made-background-D-2x.png);
     background-repeat: no-repeat;
+  }
+  .made-section__button {
+    position: absolute;
+    top: 632px;
   }
 }/*# sourceMappingURL=main.css.map */
