--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -25,7 +25,7 @@
 
       <ul class="contacts-list unstyled-list">
         <li>
-          <a class="contacts-list__tel" href="tel:+61(0) 383 766 284">
+          <a class="contacts-list__tel" href="tel:+610383766284">
             +61(0) 383 766 284</a
           >
         </li>
