--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -9,16 +9,7 @@
   margin: 0 auto;
   width: 320px;
 }
-@media screen and (min-width: 768px) {
-  .container {
-    width: 768px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .container {
-    width: 1200px;
-  }
-}
+
 .unstyled-list {
   list-style: none;
 }
@@ -157,99 +148,7 @@
     cursor: pointer;
   }
 }
-/*Media-contacts-768*/
-@media screen and (min-width: 768px) {
-  .contacts {
-    &__inner-section {
-      flex-direction: row;
-      justify-content: center;
-      gap: 32px;
-    }
-    &__inner {
-      width: 224px;
-      padding-left: 32px;
-      padding-right: 33px;
-    }
-    &__title {
-      font-size: $font-size-16;
-    }
-    &__subtitle {
-      padding-top: 32px;
-      padding-bottom: 12px;
-      font-size: $font-size-14;
-    }
-    &__text {
-      padding-bottom: 32px;
-      font-size: $font-size-14;
-    }
-  }
-  .time-schedule {
-    padding-bottom: 32px;
-    font-size: $font-size-14;
 
-    &__days {
-      padding-top: 32px;
-      font-size: $font-size-14;
-    }
-    &__hours {
-      font-size: $font-size-14;
-    }
-  }
-  .time-schedule--days2 {
-    padding-top: 12px;
-  }
-  .contacts-list {
-    padding-top: 12px;
-    font-size: $font-size-14;
-  }
-}
-
-/*Media-contacts-1280*/
-
-@media screen and (min-width: 1200px) {
-  .contacts {
-    &__inner-section {
-      flex-direction: row;
-      justify-content: center;
-      gap: 32px;
-    }
-    &__inner {
-      width: 368px;
-      padding-left: 40px;
-      padding-right: 40px;
-    }
-    &__title {
-      font-size: $font-size-16;
-    }
-    &__subtitle {
-      padding-top: 32px;
-      font-size: $font-size-16;
-    }
-    &__text {
-      padding-bottom: 32px;
-      font-size: $font-size-16;
-      padding-right: 20px;
-    }
-  }
-  .time-schedule {
-    padding-bottom: 32px;
-
-    &__days {
-      padding-top: 32px;
-      font-size: $font-size-16;
-    }
-    &__hours {
-      font-size: $font-size-16;
-    }
-  }
-  .time-schedule--days2 {
-    padding-top: 12px;
-  }
-  .contacts-list {
-    padding-top: 32px;
-    font-size: $font-size-16;
-  }
-}
 /*Footer*/
 
 .footer {
@@ -410,143 +309,6 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
-/*Media-footer-768*/
-@media screen and (min-width: 768px) {
-  .buttons {
-    flex-direction: row;
-    gap: 14.5px;
-
-    &__list {
-      display: flex;
-      flex-direction: row;
-      margin-top: 60px;
-    }
-    &__items {
-      width: 191.45px;
-      gap: 13.4px;
-    }
-    .buttons--second {
-      width: 174.05px;
-      gap: 13.17px;
-    }
-  }
-  .footer-title {
-    flex-direction: row;
-    &__itmes {
-      font-size: 26px;
-      line-height: 30px;
-      letter-spacing: 0.04em;
-      width: 340px;
-      height: 57px;
-    }
-
-    .footer-title--second {
-      width: 340px;
-      height: 110px;
-      font-size: 48px;
-      line-height: 55px;
-      letter-spacing: 0.06em;
-    }
-  }
-  .svg-section {
-    justify-content: flex-end;
-    margin-left: 110px;
-  }
-  .svg-footer {
-    padding-bottom: 47px;
-
-    &__items {
-      width: 34px;
-      height: 34px;
-    }
-  }
-  .footer-contact {
-    font-size: $font-size-14;
-  }
-  .copyright-section {
-    padding-bottom: 4px;
-    padding-top: 8px;
-
-    &__text {
-      line-height: 186%;
-      padding-left: 0;
-      padding-right: 0;
-      width: 278px;
-      height: 26px;
-    }
-  }
-}
-/*Media-footer-1280*/
-@media screen and (min-width: 1200px) {
-  .buttons {
-    flex-direction: row;
-    gap: 12px;
-
-    &__list {
-      display: flex;
-      flex-direction: row;
-      margin-top: 61px;
-    }
-    &__items {
-      width: 198px;
-      gap: 13.62px;
-    }
-    .buttons--second {
-      width: 168px;
-      gap: 12.71px;
-    }
-  }
-  .footer-title {
-    flex-direction: row;
-    &__itmes {
-      font-size: $font-size-30;
-      line-height: 34px;
-      width: 472px;
-      height: 34px;
-    }
-    &__list {
-      padding-top: 121px;
-      padding-bottom: 60px;
-      padding-left: 16px;
-    }
-    .footer-title--second {
-      width: 474px;
-      height: 66px;
-      font-size: $font-size-58;
-      line-height: 66px;
-      letter-spacing: 0.06em;
-    }
-  }
-  .svg-section {
-    margin-left: 375px;
-    margin-top: 139px;
-    margin-right: 16px;
-    margin-bottom: 60px;
-  }
-  .svg-footer {
-    padding-bottom: 60px;
-
-    &__items {
-      width: 34px;
-      height: 34px;
-    }
-  }
-  .footer-contact {
-    font-size: $font-size-16;
-  }
-  .copyright-section {
-    padding-bottom: 4px;
-    padding-top: 7px;
-
-    &__text {
-      line-height: 186%;
-      padding-left: 0;
-      padding-right: 0;
-      width: 278px;
-      height: 26px;
-    }
-  }
-}
 
 /*Modala*/
 .modal {
@@ -703,8 +465,220 @@
   opacity: 0;
 }
 
-/*Media-modala-768*/
+/*Modala-2*/
+.modal-2 {
+  background: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 99;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &__inner {
+    width: 300px;
+    height: 500px;
+    background: $white-color;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    border: 3px solid $secondary-color;
+  }
+  &__button-close {
+    display: flex;
+    width: 11px;
+    height: 11px;
+    border-radius: 50%;
+    padding: 0;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid $secondary-color;
+    background-color: $white-color;
+    margin-left: 10px;
+    margin-top: 10px;
+  }
+  &__maps {
+    width: 100%;
+  }
+
+  &__container {
+    border: 3px solid $secondary-color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+  }
+  &__title {
+    font-family: 'Titan One';
+    font-style: normal;
+    font-weight: $font-weight-400;
+    font-size: 14px;
+    line-height: 21px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: $primary-color;
+    display: flex;
+    justify-content: center;
+  }
+
+  &__adress {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: $font-weight-500;
+    font-size: $font-size-14;
+    letter-spacing: 0.04em;
+    color: $secondary-color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+    gap: 30px;
+  }
+  &__button {
+    background-color: $white-color;
+    border-radius: 25px;
+    border-color: $secondary-color;
+    padding: 10px;
+    margin-left: 60px;
+    margin-bottom: 30px;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
+  &__button:hover {
+    transform: scale(1.2);
+    transition-duration: 1s;
+  }
+
+  &__btn-text {
+    color: $primary-color;
+    text-decoration: none;
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: $font-weight-400;
+    font-size: $font-size-16;
+  }
+  &__location-svg {
+    fill: $primary-color;
+  }
+}
+.is-hidden-2 {
+  display: none;
+  opacity: 0;
+}
+
+/*Media-768*/
+
 @media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+  .contacts {
+    &__inner-section {
+      flex-direction: row;
+      justify-content: center;
+      gap: 32px;
+    }
+    &__inner {
+      width: 224px;
+      padding-left: 32px;
+      padding-right: 33px;
+    }
+    &__title {
+      font-size: $font-size-16;
+    }
+    &__subtitle {
+      padding-top: 32px;
+      padding-bottom: 12px;
+      font-size: $font-size-14;
+    }
+    &__text {
+      padding-bottom: 32px;
+      font-size: $font-size-14;
+    }
+  }
+  .time-schedule {
+    padding-bottom: 32px;
+    font-size: $font-size-14;
+
+    &__days {
+      padding-top: 32px;
+      font-size: $font-size-14;
+    }
+    &__hours {
+      font-size: $font-size-14;
+    }
+  }
+  .time-schedule--days2 {
+    padding-top: 12px;
+  }
+  .contacts-list {
+    padding-top: 12px;
+    font-size: $font-size-14;
+  }
+  .buttons {
+    flex-direction: row;
+    gap: 14.5px;
+
+    &__list {
+      display: flex;
+      flex-direction: row;
+      margin-top: 60px;
+    }
+    &__items {
+      width: 191.45px;
+      gap: 13.4px;
+    }
+    .buttons--second {
+      width: 174.05px;
+      gap: 13.17px;
+    }
+  }
+  .footer-title {
+    flex-direction: row;
+    &__itmes {
+      font-size: 26px;
+      line-height: 30px;
+      letter-spacing: 0.04em;
+      width: 340px;
+      height: 57px;
+    }
+
+    .footer-title--second {
+      width: 340px;
+      height: 110px;
+      font-size: 48px;
+      line-height: 55px;
+      letter-spacing: 0.06em;
+    }
+  }
+  .svg-section {
+    justify-content: flex-end;
+    margin-left: 110px;
+  }
+  .svg-footer {
+    padding-bottom: 47px;
+
+    &__items {
+      width: 34px;
+      height: 34px;
+    }
+  }
+  .footer-contact {
+    font-size: $font-size-14;
+  }
+  .copyright-section {
+    padding-bottom: 4px;
+    padding-top: 8px;
+
+    &__text {
+      line-height: 186%;
+      padding-left: 0;
+      padding-right: 0;
+      width: 278px;
+      height: 26px;
+    }
+  }
   .modal {
     &__inner {
       width: 450px;
@@ -734,135 +708,6 @@
   .button-footer {
     margin-top: 10px;
   }
-}
-
-/*Media-modala-1280*/
-@media screen and (min-width: 1200px) {
-  .modal {
-    &__button {
-      left: 475px;
-    }
-    &__inner {
-      width: 528px;
-      height: 581px;
-    }
-  }
-  .form {
-    &__input {
-      width: 448px;
-    }
-    &__text-area {
-      width: 448px;
-    }
-  }
-  .button-footer {
-    margin-top: 0;
-  }
-}
-/*Modala-2*/
-.modal-2 {
-  background: rgba(0, 0, 0, 0.2);
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  z-index: 99;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.modal-2__inner {
-  width: 300px;
-  height: 500px;
-  background: $white-color;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  border: 3px solid $secondary-color;
-}
-.modal-2__button-close {
-  display: flex;
-  width: 11px;
-  height: 11px;
-  border-radius: 50%;
-  padding: 0;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid $secondary-color;
-  background-color: $white-color;
-  margin-left: 10px;
-  margin-top: 10px;
-}
-.modal-2__maps {
-  width: 100%;
-}
-
-.modal-2__container {
-  border: 3px solid $secondary-color;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 5px;
-}
-.modal-2__title {
-  font-family: 'Titan One';
-  font-style: normal;
-  font-weight: $font-weight-400;
-  font-size: 14px;
-  line-height: 21px;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-  color: $primary-color;
-  display: flex;
-  justify-content: center;
-}
-
-.modal-2__adress {
-  font-family: 'DM Sans';
-  font-style: normal;
-  font-weight: $font-weight-500;
-  font-size: $font-size-14;
-  letter-spacing: 0.04em;
-  color: $secondary-color;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 20px;
-  gap: 30px;
-}
-.modal-2__button {
-  background-color: $white-color;
-  border-radius: 25px;
-  border-color: $secondary-color;
-  padding: 10px;
-  margin-left: 60px;
-  margin-bottom: 30px;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-.modal-2__button:hover {
-  transform: scale(1.2);
-  transition-duration: 1s;
-}
-
-.modal_btn-text {
-  color: $primary-color;
-  text-decoration: none;
-  font-family: 'DM Sans';
-  font-style: normal;
-  font-weight: $font-weight-400;
-  font-size: $font-size-16;
-}
-.modal-2__location-svg {
-  fill: $primary-color;
-}
-.is-hidden-2 {
-  display: none;
-  opacity: 0;
-}
-/*Media-modala-2-768*/
-
-@media screen and (min-width: 768px) {
   .modal-2 {
     &__inner {
       width: 450px;
@@ -892,26 +737,113 @@
     }
   }
 }
-/*Media-modala-2-1280*/
+/*Media-1280*/
+@media screen and (min-width: 1280px) {
+  .container {
+    width: 1280px;
+  }
+  .contacts {
+    &__inner {
+      width: 528px;
+      height: 581px;
+      padding-left: 40px;
+      padding-right: 40px;
+    }
 
-@media screen and (min-width: 1200px) {
-  .modal-2 {
+    &__subtitle {
+      font-size: $font-size-16;
+    }
+    &__text {
+      font-size: $font-size-16;
+      padding-right: 20px;
+    }
+  }
+  .time-schedule {
+    &__days {
+      font-size: $font-size-16;
+    }
+    &__hours {
+      font-size: $font-size-16;
+    }
+  }
+
+  .contacts-list {
+    padding-top: 32px;
+    font-size: $font-size-16;
+  }
+  .buttons {
+    gap: 12px;
+
+    &__list {
+      margin-top: 61px;
+    }
+    &__items {
+      width: 198px;
+      gap: 13.62px;
+    }
+    .buttons--second {
+      width: 168px;
+      gap: 12.71px;
+    }
+  }
+  .footer-title {
+    &__itmes {
+      font-size: $font-size-30;
+      line-height: 34px;
+      width: 472px;
+      height: 34px;
+    }
+    &__list {
+      padding-top: 121px;
+      padding-bottom: 60px;
+      padding-left: 16px;
+    }
+    .footer-title--second {
+      width: 474px;
+      height: 66px;
+      font-size: $font-size-58;
+      line-height: 66px;
+    }
+  }
+  .svg-section {
+    margin-left: 375px;
+    margin-top: 139px;
+    margin-right: 16px;
+    margin-bottom: 60px;
+  }
+  .svg-footer {
+    padding-bottom: 60px;
+  }
+  .footer-contact {
+    font-size: $font-size-16;
+  }
+  .copyright-section {
+    padding-top: 7px;
+  }
+  .modal {
+    &__button {
+      left: 475px;
+    }
     &__inner {
       width: 528px;
       height: 581px;
     }
-    &__button-close {
-      width: 30px;
-      height: 30px;
+  }
+  .form {
+    &__input {
+      width: 448px;
     }
-    &__title-2 {
-      font-size: 18px;
+    &__text-area {
+      width: 448px;
     }
-    &__container {
-      margin: 30px;
-    }
-    &__adress {
-      font-size: $font-size-16;
+  }
+  .button-footer {
+    margin-top: 0;
+  }
+  .modal-2 {
+    &__inner {
+      width: 528px;
+      height: 581px;
     }
     &__button {
       margin-top: 10px;
